# df_bvi3d

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/df_bvi3d/: __init__.py
tests/: test_df_bvi3d.py
