[tool.poetry]
name = "df_bvi3d"
version = "0.1.0"
description = "Dataframe extraction from MongoDB for BVI3D project."
authors = ["Nodenot & Cornejo"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
